--- a/_config.yml
+++ b/_config.yml
@@ -71,9 +71,9 @@ panelbear_analytics: XXXXXXXXX # panelbear analytics site ID
 # Blog
 # -----------------------------------------------------------------------------
 
-blog_name: blog  # your blog must have a name for it to show up in the nav bar
-blog_description: thoughts and tutorials
-permalink: /blog/:year/:title/
+blog_name:   # your blog must have a name for it to show up in the nav bar
+blog_description: 
+permalink: 
 
 # Pagination
 pagination:
