--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ description: > # the ">" symbol means to ignore newlines until "footer_text:"
 footer_text: 
 icon: 🌻 # the emoji used as the favicon
 url:  # the base hostname & protocol for your site
-baseurl: "" # the subpath of your site, e.g. /blog/
+baseurl:  # the subpath of your site, e.g. /blog/
 last_updated: false # set to true if you want to display last updated in the footer
 impressum_path:  # set to path to include impressum link in the footer, use the same path as permalink in a page, helps to conform with EU GDPR
 
@@ -73,11 +73,11 @@ panelbear_analytics: XXXXXXXXX # panelbear analytics site ID
 
 blog_name:   # your blog must have a name for it to show up in the nav bar
 blog_description: 
-permalink: ""
+permalink: 
 
 # Pagination
 pagination:
-  enabled: true
+  enabled: false
 
 # Comments
 disqus_shortname: al-folio # put your disqus shortname
@@ -120,7 +120,7 @@ kramdown:
       start_line: 1
 
 # Includes & excludes
-#include: ['_pages']
+include: ['_pages']
 exclude:
   - bin
   - Gemfile
@@ -151,7 +151,7 @@ github: [metadata]
 scholar:
 
   last_name: Di Cara
-  first_name: [Nina, H.]
+  first_name: [Nina]
 
   style: apa
   locale: en
